--- a/app/globals.css
+++ b/app/globals.css
@@ -56,6 +56,28 @@
     body {
       @apply bg-background text-foreground;
     }
+
+    .CollapsibleContent[data-state="open"] {
+      animation: slideDown 200ms ease-out;
+    }
+
+    .CollapsibleContent[data-state="closed"] {
+      animation: slideUp 200ms ease-out;
+    }
+
+    @keyframes slideDown {
+      from {
+        opacity: 10%;
+        transform: translateY(-1rem);
+      }
+    }
+
+    @keyframes slideUp {
+      to {
+        opacity: 10%;
+        transform: translateY(-1rem);
+      }
+    }
   }
 
 
